# subtitle-autogenerator

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: config.py  main.py  scanner.py  subtitle.py  transcriber.py
